--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<!--
+ * JAAK-IT SAPI DE CV - All Rights Reserved
+ * Unauthorized copying of this file, via any medium is strictly prohibited
+ * Proprietary and confidential
+ * Written by root < jesus.serrano@jaak-it.com >, 2021
+ * Support <support@jaak-it.com>
+-->
+
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
